# defilens

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/analytics/: alerts.py  engine.py
src/api/: server.py
src/chains/: scanner.py  yield_tracker.py
src/cli/: main.py
src/core/: config.py  portfolio.py  prices.py
tests/: test_portfolio.py
