[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "defilens"
version = "1.2.0"
description = "Cross-chain DeFi portfolio tracker with yield analytics and real-time monitoring"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "BankJAY", email = "bankjay894-spec@users.noreply.github.com" }]
keywords = ["defi", "blockchain", "portfolio", "yield", "analytics", "web3"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "web3>=6.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "rich>=13.7.0",
    "click>=8.1.0",
    "httpx>=0.25.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "apscheduler>=3.10.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "pytest-asyncio>=0.23.0", "ruff>=0.1.0"]

[project.scripts]
defilens = "src.cli.main:cli"

[project.urls]
Homepage = "https://github.com/BankJAY/defilens"
Documentation = "https://github.com/BankJAY/defilens#readme"
Repository = "https://github.com/BankJAY/defilens"
Issues = "https://github.com/BankJAY/defilens/issues"
